--- a/apps/landing-page/package.json
+++ b/apps/landing-page/package.json
@@ -12,7 +12,9 @@
     "@repo/ui": "workspace:*",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "next": "14.0.4",
+    "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^10.18.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
